--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2915,3 +2915,411 @@ body {
 .cid-qAgDeSvZhH .section-text DIV {
   text-align: left;
 }
+.cid-qAhkhrMp3W {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #efefef;
+}
+.cid-qAhkhrMp3W .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qAhkhrMp3W .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qAhkhrMp3W .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qAhkhrMp3W .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qAhkhrMp3W .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qAhkhrMp3W .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qAhkhrMp3W .img-item {
+    width: 100% !important;
+  }
+  .cid-qAhkhrMp3W .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qAhkhrMp3W P {
+  text-align: left;
+}
+.cid-qAhcWnpUjd {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qAhcWnpUjd .mbr-text,
+.cid-qAhcWnpUjd blockquote {
+  color: #767676;
+}
+.cid-qAhcWnpUjd .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhcWnpUjd .mbr-text P {
+  text-align: center;
+}
+.cid-qAhcQsjhDA {
+  background: #ffffff;
+}
+.cid-qAhcQsjhDA .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhcQsjhDA .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhcWbg22m {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhcWbg22m .mbr-text,
+.cid-qAhcWbg22m blockquote {
+  color: #767676;
+}
+.cid-qAhcWbg22m .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhcWbg22m .mbr-text P {
+  text-align: left;
+}
+.cid-qAhcQY1RV3 {
+  background: #ffffff;
+}
+.cid-qAhcQY1RV3 .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhcQY1RV3 .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhcUL1Q1p {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhcUL1Q1p .mbr-text,
+.cid-qAhcUL1Q1p blockquote {
+  color: #767676;
+}
+.cid-qAhcUL1Q1p .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhcUL1Q1p .mbr-text P {
+  text-align: left;
+}
+.cid-qAhcRINnc9 {
+  background: #ffffff;
+}
+.cid-qAhcRINnc9 .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhcRINnc9 .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhtZ0AU8 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhtZ0AU8 .mbr-text,
+.cid-qAhhtZ0AU8 blockquote {
+  color: #767676;
+}
+.cid-qAhhtZ0AU8 .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhtZ0AU8 .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhucK41f {
+  background: #ffffff;
+}
+.cid-qAhhucK41f .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhucK41f .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhuoxzyY {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhuoxzyY .mbr-text,
+.cid-qAhhuoxzyY blockquote {
+  color: #767676;
+}
+.cid-qAhhuoxzyY .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhuoxzyY .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhuzjV8S {
+  background: #ffffff;
+}
+.cid-qAhhuzjV8S .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhuzjV8S .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhuJEFQR {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhuJEFQR .mbr-text,
+.cid-qAhhuJEFQR blockquote {
+  color: #767676;
+}
+.cid-qAhhuJEFQR .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhuJEFQR .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhuSI7f2 {
+  background: #ffffff;
+}
+.cid-qAhhuSI7f2 .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhuSI7f2 .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhv1lrBC {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhv1lrBC .mbr-text,
+.cid-qAhhv1lrBC blockquote {
+  color: #767676;
+}
+.cid-qAhhv1lrBC .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhv1lrBC .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhv8BVQN {
+  background: #ffffff;
+}
+.cid-qAhhv8BVQN .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhv8BVQN .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhvjHHZS {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhvjHHZS .mbr-text,
+.cid-qAhhvjHHZS blockquote {
+  color: #767676;
+}
+.cid-qAhhvjHHZS .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhvjHHZS .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhvrjztJ {
+  background: #ffffff;
+}
+.cid-qAhhvrjztJ .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhvrjztJ .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhvBVvvV {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhvBVvvV .mbr-text,
+.cid-qAhhvBVvvV blockquote {
+  color: #767676;
+}
+.cid-qAhhvBVvvV .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhvBVvvV .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhvIYRhU {
+  background: #ffffff;
+}
+.cid-qAhhvIYRhU .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhvIYRhU .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhvRP7TM {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhvRP7TM .mbr-text,
+.cid-qAhhvRP7TM blockquote {
+  color: #767676;
+}
+.cid-qAhhvRP7TM .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhvRP7TM .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhvZlnVV {
+  background: #ffffff;
+}
+.cid-qAhhvZlnVV .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhvZlnVV .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhwaLhOj {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhwaLhOj .mbr-text,
+.cid-qAhhwaLhOj blockquote {
+  color: #767676;
+}
+.cid-qAhhwaLhOj .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhwaLhOj .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhwhYklE {
+  background: #ffffff;
+}
+.cid-qAhhwhYklE .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhwhYklE .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAhhwvZp4I {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qAhhwvZp4I .mbr-text,
+.cid-qAhhwvZp4I blockquote {
+  color: #767676;
+}
+.cid-qAhhwvZp4I .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qAhhwvZp4I .mbr-text P {
+  text-align: left;
+}
+.cid-qAhhwT1yWC {
+  background: #ffffff;
+}
+.cid-qAhhwT1yWC .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qAhhwT1yWC .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qAheKfIUDI {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qAheKfIUDI .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qAheKfIUDI .section-text {
+  padding: 2rem 0;
+  text-align: left;
+}
+.cid-qAheKfIUDI .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qAheKfIUDI .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qAheKfIUDI .section-text DIV {
+  text-align: left;
+}
